k8s/overlays/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mta-audio-editor
  namespace: mta-audio-editor
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
spec:
  ingressClassName: nginx
  rules:
    - host: mta-audio-editor.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mta-audio-editor
                port:
                  number: 80
